<resources>
    <string name="app_name">User Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="YourChildrenWillAppearHere">Your children will appear here.</string>
    <string name="add_a_child">Add a child</string>
    <string name="logout">Logout</string>
    <string name="locations">Locations</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="child_name">Child name</string>
    <string name="action_add_new_child">Add new child</string>
    <string name="no_account_yet_sign_up">No account yet! Sign up</string>
    <string name="signed_out">Signed out!</string>
    <string name="child">Child</string>
    <string name="parent">Parent</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="have_an_account_sign_in">Have an account, sign in!</string>
    <string name="action_sign_up">Sign up</string>
    <string name="please_select_your_user_type">Please select your user type.</string>
    <string name="user_type">User type:</string>
</resources>
